--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "ai-quizcraft-backend",
   "version": "1.0.0",
+  "description": "AI QuizCraft backend with Express + OpenAI",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "openai": "^4.9.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.67.3"
   }
 }
